<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_raiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".KeepCalmActivity">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/keepcalm_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/texto_keep"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tamanho_fonte_maior"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/texto_calm"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tamanho_fonte_maior"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/texto_and"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tamanho_fonte_menor" />

    <TextView
        android:id="@+id/linha1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/hint_campo_linha1"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tamanho_fonte_maior"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/linha2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hint_campo_linha2"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tamanho_fonte_maior"
        android:textStyle="bold" />

</LinearLayout>