<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/view_raiz"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_red_dark"
    tools:context=".PrincipalActivity">

    <ImageView
        android:layout_width="80dp"
        android:src="@drawable/keepcalm_logo"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="80dp" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/texto_keep"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/tamanho_fonte_maior"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/texto_calm"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/tamanho_fonte_maior"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/texto_and"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="@dimen/tamanho_fonte_menor"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/campo_linha1"
        android:layout_width="match_parent"
        android:hint="@string/hint_campo_linha1"
        android:textColorHint="@android:color/holo_red_light"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/tamanho_fonte_menor"
        android:textColor="@android:color/white"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/campo_linha2"
        android:layout_width="match_parent"
        android:hint="@string/hint_campo_linha2"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/holo_red_light"
        android:textSize="@dimen/tamanho_fonte_menor"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        android:layout_height="wrap_content" />

</LinearLayout>
